--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "element-ui": "^2.0.11",
+    "pug": "^2.0.0-rc.4",
     "vue": "^2.5.13",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0"
