--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "dns": "^0.2.2",
     "element-ui": "^2.0.11",
+    "md5": "^2.2.1",
+    "nprogress": "^0.2.0",
     "pug": "^2.0.0-rc.4",
     "vue": "^2.5.13",
     "vue-resource": "^1.3.4",
